menu text color

--- a/index.html
+++ b/index.html
@@ -213,9 +213,7 @@
 							<span class="text-lg font-bold">Luiz Américo</span>
 							<span class="font-bold">Grupo BBJ</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“Trabalhar com a Sothink é como ter um time de criação dentro da empresa. Rápidos, criativos e extremamente profissionais.”</span
-						>
+						<span class="text-sm leading-[20px]">“Trabalhar com a Sothink é como ter um time de criação dentro da empresa. Rápidos, criativos e extremamente profissionais.”</span>
 					</aside>
 				</article><article class="flex items-center gap-4 max-w-[388px]">
 					<img src="/images/clientes/2.png" width="204" height="100" alt="Cliente Sothink" />
@@ -224,9 +222,7 @@
 							<span class="text-lg font-bold">Jéssica e Gustavo</span>
 							<span class="font-bold">Grupo Cast</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“Eles vão além do briefing. Entregam não só o que pedimos, mas o que é preciso para crescer.”</span
-						>
+						<span class="text-sm leading-[20px]">“Eles vão além do briefing. Entregam não só o que pedimos, mas o que é preciso para crescer.”</span>
 					</aside>
 				</article><article class="flex items-center gap-4 max-w-[388px]">
 					<img src="/images/clientes/3.png" width="204" height="100" alt="Cliente Sothink" />
@@ -235,9 +231,7 @@
 							<span class="text-lg font-bold">Elaine</span>
 							<span class="font-bold">Igetech</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“A Sothink trouxe um novo posicionamento para nossa marca, com identidade forte e coerente. Nossos clientes perceberam a mudança!”</span
-						>
+						<span class="text-sm leading-[20px]">“A Sothink trouxe um novo posicionamento para nossa marca, com identidade forte e coerente. Nossos clientes perceberam a mudança!”</span>
 					</aside>
 				</article><article class="flex items-center gap-4 max-w-[388px]">
 					<img src="/images/clientes/4.png" width="204" height="100" alt="Cliente Sothink" />
@@ -246,9 +240,7 @@
 							<span class="text-lg font-bold">Joza Ferreira</span>
 							<span class="font-bold">Hípica Pagliato</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“O diferencial da Sothink está na escuta atenta e nas soluções personalizadas. Foi um divisor de águas para nossa empresa.”</span
-						>
+						<span class="text-sm leading-[20px]">“O diferencial da Sothink está na escuta atenta e nas soluções personalizadas. Foi um divisor de águas para nossa empresa.”</span>
 					</aside>
 				</article><article class="flex items-center gap-4 max-w-[388px]">
 					<img src="/images/clientes/5.png" width="204" height="100" alt="Cliente Sothink" />
@@ -257,9 +249,7 @@
 							<span class="text-lg font-bold">Flávio Toledo</span>
 							<span class="font-bold">Soal Esquadrias</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“Conseguimos organizar nossa comunicação de forma estratégica graças ao trabalho da Sothink. Eles pensam no negócio como um todo.”</span
-						>
+						<span class="text-sm leading-[20px]">“Conseguimos organizar nossa comunicação de forma estratégica graças ao trabalho da Sothink. Eles pensam no negócio como um todo.”</span>
 					</aside>
 				</article><article class="flex items-center gap-4 max-w-[388px]">
 					<img src="/images/clientes/6.png" width="204" height="100" alt="Cliente Sothink" />
@@ -268,17 +258,180 @@
 							<span class="text-lg font-bold">Valdinei Bonfim</span>
 							<span class="font-bold">Tuali Seguros</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>“Desde o primeiro contato até a entrega final, a experiência foi impecável. Recomendo para qualquer empresa que leve sua marca a sério.”</span
-						>
+						<span class="text-sm leading-[20px]">“Desde o primeiro contato até a entrega final, a experiência foi impecável. Recomendo para qualquer empresa que leve sua marca a sério.”</span>
 					</aside>
 				</article>
 			</div>
-			<div></div>
 		</footer>
 	</main>
 </section>
 <!-- LAMINA 7 -->
+<section class="w-full h-auto py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Criação e produção de fotos e vídeos</span>
+		<section class="flex gap-14">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+		<section class="flex gap-14 mt-28">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 8 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Criação de campanhas</span>
+		<section class="flex gap-24">
+			<video class="max-w-[560px]" controls loop muted autoplay preload="metadata" width="557" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[560px]" controls loop muted autoplay preload="metadata" width="557" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 9 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Lançamentos</span>
+		<section class="flex gap-12">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 10 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Cobertura de Shows e Eventos</span>
+		<section class="w-full flex justify-center items-center gap-12">
+			<video class="max-w-[255px]" controls loop muted autoplay preload="metadata" width="255" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<div class="w-full h-full bg-[#FF66C4] rounded-[30px] max-w-[358px] max-h-[228px]">
+				<span class="text-5xl font-bold text-center leading-[72px]">
+					<p>FILME</p>
+					<p>NATAL</p>
+					<p>SOLIDARIO</p>
+				</span>
+			</div>
+			<video class="max-w-[406px]" controls loop muted autoplay preload="metadata" width="406" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 11 -->
+ <section class="w-full h-screen py-20 relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl">Conteúdos Redes Sociais</span>
+		<section class="w-full flex justify-center items-center gap-24">
+			<img src="/images/feed-cast.png" width="284" height="100" />
+			<img src="/images/post-cast.png" width="344" height="100" />
+			<video class="max-w-[344px]" controls loop muted autoplay preload="metadata" width="344" height="472">
+				<source src="/videos/cast.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 12 -->
 
 		</div>
 
