menu text color

--- a/index.html
+++ b/index.html
@@ -497,6 +497,72 @@
 	</main>
 </section>
 <!-- LAMINA 16 -->
+<footer class="w-full h-screen">
+	<main class="w-full h-full flex gap-16 py-12">
+		<aside class="bg-[#61047B] flex items-center h-full rounded-tr-2xl rounded-br-2xl px-28">
+			<article class="text-9xl text-white flex flex-col gap-5">
+				<div class="playfair italic font-bold leading-[116px]">
+					<p>&nbsp;so</p>
+					<span class="flex items-start w-fit h-fit"
+						>think
+						<div class="border-2 border-white rounded-full px-2 pb-0.5 mt-3 flex">
+							<span class="text-xl">R</span>
+						</div>
+					</span>
+				</div>
+				<span class="text-[24px] montserrat ml-3">agência de marketing</span>
+			</article>
+		</aside>
+		<section class="w-[50vw] h-full flex flex-col justify-between items-center gap-20 py-8">
+			<header class="w-full h-full athiti flex items-center justify-center gap-20">
+				<div class="h-full flex flex-col justify-between">
+					<div class="w-full">
+						<span class="text-xl leading-[20px]">Atendimento<br />online</span>
+					</div>
+					<div class="w-full">
+						<span class="text-xl leading-[20px]">Atendimento<br />presencial</span>
+					</div>
+					<div class="w-full flex justify-between items-center gap-">
+						<span class="text-xl leading-[20px]">Meeting<br />place</span>
+					</div>
+					<div class="w-full flex justify-between items-center gap-">
+						<span class="text-xl leading-[20px]">Agende<br />uma reunião</span>
+					</div>
+				</div>
+				<div class="h-full flex flex-col justify-between">
+					<div class="w-full">
+						<span class="text-2xl font-medium leading-[24px]">
+							<p>BRASIL</p>
+							<p>ESPANHA</p>
+							<p>INGLATERRA</p>
+						</span>
+					</div>
+					<div class="w-full">
+						<span class="text-2xl leading-[24px]">
+							<p class="font-medium">BRASIL</p>
+							<p>São Paulo</p>
+							<p>ABC Paulista</p>
+							<p>Sorocaba e Região</p>
+						</span>
+					</div>
+					<div class="w-full">
+						<img src="/images/meet.png" width="70" height="64" alt="Links Sothink" />
+					</div>
+					<div class="w-full">
+						<img src="/images/whatsapp.png" width="70" height="64" alt="Links Sothink" />
+					</div>
+				</div>
+			</header>
+			<footer class="flex w-full items-center justify-center gap-6">
+				<img src="/images/google.png" width="97" height="100" alt="Links Sothink" />
+				<img src="/images/facebook.png" width="110" height="100" alt="Links Sothink" />
+				<img src="/images/instagram.png" width="157" height="100" alt="Links Sothink" />
+				<img src="/images/linkedin.png" width="132" height="100" alt="Links Sothink" />
+				<img src="/images/spotify.png" width="120" height="100" alt="Links Sothink" />
+			</footer>
+		</section>
+	</main>
+</footer>
 
 		</div>
 
